adding login & register api

--- a/templates/partials/dynamic_header.hbs
+++ b/templates/partials/dynamic_header.hbs
@@ -6,7 +6,7 @@
             </div>
             <div class="col-sm-6">
                 <ul class="breadcrumb float-sm-right list-unstyled" style="background-color:ghostwhite !important;">
-                    <li class="breadcrumb-item"><a href="/" role="button">{{title}}</a> </li>
+                    <li class="breadcrumb-item"><a href="/users" role="button">{{title}}</a> </li>
                     <li class="breadcrumb-item">{{head}}</li>
                 </ul>
             </div>
