--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,5 +1,5 @@
 <header class="app-header">
-    <a href="/" class="app-navbrand">{{title}}</a>
+    <a href="/users/" class="app-navbrand">{{title}}</a>
     <a href="#" class="app-header-toggle">
         <i class="fa fa-bars"></i>
     </a>
