--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -3,7 +3,7 @@
         <!--h5 class="mt-4 mb-2">Info Box With <code>bg-*</code></h5-->
         <div class="row">
             <div class="col-md-3 col-sm-6 col-12">
-                <a href="/completed-schedules">
+                <a href="/users/padding-schedules">
                     <div class="info-box bg-info">
                         <span class="info-box-icon"><i class="far fa-bookmark"></i></span>
 
@@ -24,7 +24,7 @@
 
             <!-- /.col -->
             <div class="col-md-3 col-sm-6 col-12">
-                <a href="/padding-schedules">
+                <a href="/users/completed-schedules">
                     <div class="info-box bg-success">
                         <span class="info-box-icon"><i class="far fa-thumbs-up"></i></span>
                         <div class="info-box-content">
@@ -43,7 +43,7 @@
             </div>
             <!-- /.col -->
             <div class="col-md-3 col-sm-6 col-12">
-                <a href="events">
+                <a href="/users/events">
                     <div class="info-box bg-warning">
                         <span class="info-box-icon"><i class="far fa-calendar-alt"></i></span>
 
