--- a/templates/partials/aside.hbs
+++ b/templates/partials/aside.hbs
@@ -3,7 +3,7 @@
         <!-- Add icons to the links using the .nav-icon class
              with font-awesome or any other icon font library -->
         <li class="nav-item">
-            <a href="/" class="nav-link">
+            <a href="/users/" class="nav-link">
                 <i class="nav-icon fas fa-tachometer-alt"></i>
                 <p>
                     Dashboard
@@ -28,13 +28,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="padding-schedules" class="nav-link">
+                    <a href="/users/padding-schedules" class="nav-link">
                         <i class="fa fa-door-open nav-icon"></i>
                         <p>Active Page</p>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="completed-schedules" class="nav-link">
+                    <a href="/users/completed-schedules" class="nav-link">
                         <i class="fa fa-door-closed nav-icon"></i>
                         <p>Inactive Page</p>
                     </a>
