--- a/templates/views/error.hbs
+++ b/templates/views/error.hbs
@@ -1,38 +1,39 @@
 <!--h1>{{message}}</h1>
 <h2></h2-->
 
-<h1>{{message}}</h1>
+<!--h1>{{message}}</h1>
 <h2>{{error.status}}</h2>
-<pre>{{error.stack}}</pre>
+<pre>{{error.stack}}</pre-->
+<div class="login-page">
+    <!-- Main content -->
+    <section class="content">
+        <div class="error-page">
+            <h2 class="headline text-warning">{{error.status}}</h2>
 
-<!-- Main content -->
-<!--section class="content">
-    <div class="error-page">
-        <h2 class="headline text-warning">{{error.status}}</h2>
+            <div class="error-content">
+                <h3><i class="fas fa-exclamation-triangle text-warning"></i> Oops! Page not found.</h3>
 
-        <div class="error-content">
-            <h3><i class="fas fa-exclamation-triangle text-warning"></i> Oops! Page not found.</h3>
+                <p>
+                    We could not find the page you were looking for.
+                    Meanwhile, you may <a href="/users">return to dashboard</a> or try using the search form.
+                </p>
 
-            <p>
-                We could not find the page you were looking for.
-                Meanwhile, you may <a href="/">return to dashboard</a> or try using the search form.
-            </p>
+                <form class="search-form">
+                    <div class="input-group">
+                        <input type="text" name="search" class="form-control" placeholder="Search">
 
-            <form class="search-form">
-                <div class="input-group">
-                    <input type="text" name="search" class="form-control" placeholder="Search">
-
-                    <div class="input-group-append">
-                        <button type="submit" name="submit" class="btn btn-warning"><i class="fas fa-search"></i>
-                        </button>
+                        <div class="input-group-append">
+                            <button type="submit" name="submit" class="btn btn-warning"><i class="fas fa-search"></i>
+                            </button>
+                        </div>
                     </div>
-                </div>
-                <!-- /.input-group -->
-</form>
+                    <!-- /.input-group -->
+                </form>
+            </div>
+            <!-- /.error-content -->
+        </div>
+        <!-- /.error-page -->
+    </section>
+    <!-- /.content -->
 </div>
-<!-- /.error-content -->
-</div>
-<!-- /.error-page -->
-</section>
-<!-- /.content -->
 <!--pre>{{error.stack}}</pre-->
