re-arranging login & register api

--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -6,18 +6,8 @@
                 <p class="login-box-msg">Sign in to start your session</p>
 
                 <form action="/api/login" method="POST">
-
-                    <!--div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Name" name="name">
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-user"></span>
-                            </div>
-                        </div>
-                    </div-->
-
                     <div class="input-group mb-3">
-                        <input type="email" class="form-control" placeholder="Email" name="email">
+                        <input type="email" class="form-control" placeholder="Email" name="email" required="required">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-envelope"></span>
@@ -25,7 +15,8 @@
                         </div>
                     </div>
                     <div class="input-group mb-3">
-                        <input type="password" class="form-control" name="password" placeholder="Password">
+                        <input type="password" class="form-control" name="password" placeholder="Password"
+                            required="required">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-lock"></span>
