--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -6,7 +6,7 @@
 
                 <form action="/apireg/registerUser" method="POST">
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" name="name" placeholder="Full name">
+                        <input type="text" class="form-control" name="name" placeholder="Full name" required="required">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-user"></span>
@@ -14,7 +14,7 @@
                         </div>
                     </div>
                     <div class="input-group mb-3">
-                        <input type="email" class="form-control" name="email" placeholder="Email">
+                        <input type="email" class="form-control" name="email" placeholder="Email" required="required">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-envelope"></span>
@@ -22,7 +22,8 @@
                         </div>
                     </div>
                     <div class="input-group mb-3">
-                        <input type="password" class="form-control" name="password1" placeholder="Password">
+                        <input type="password" class="form-control" name="password1" placeholder="Password"
+                            required="required">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-lock"></span>
@@ -30,7 +31,8 @@
                         </div>
                     </div>
                     <div class="input-group mb-3">
-                        <input type="password" class="form-control" name="password2" placeholder="Retype password">
+                        <input type="password" class="form-control" name="password2" placeholder="Retype password"
+                            required="required">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-lock"></span>
@@ -39,12 +41,12 @@
                     </div>
                     <div class="row">
                         <div class="col-8">
-                            <!--div class="icheck-primary">
-                                <input type="checkbox" id="agreeTerms" name="terms" value="agree">
+                            <div class="icheck-primary">
+                                <input type="checkbox" id="agreeTerms" name="terms" value="agree" required="required">
                                 <label for="agreeTerms">
                                     I agree to the <a href="#">terms</a>
                                 </label>
-                            </div-->
+                            </div>
                         </div>
                         <!-- /.col -->
                         <div class="col-4">
