--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -2,7 +2,7 @@
     <div class="register-box">
         <div class="card">
             <div class="card-body register-card-body">
-                <p class="login-box-msg">Register a new membership</p>
+                <p class="login-box-msg">Membership Registration</p>
 
                 <form action="/apireg/registerUser" method="POST">
                     <div class="input-group mb-3">
