getting single user

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -68,7 +68,7 @@
 
                     <div class="info-box-content">
                         <span class="info-box-text">Comments</span>
-                        <span class="info-box-number">41</span>
+                        <span class="info-box-number">{{user}}</span>
 
                         <div class="progress">
                             <div class="progress-bar" style="width: 41%"></div>
