--- a/templates/views/new-schedule.hbs
+++ b/templates/views/new-schedule.hbs
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <form method="POST" class="p-4" action="/add-schedule">
+            <form method="POST" class="p-4" action="/users/add-schedule">
                 <div class="form-group">
                     <input type="hidden" name="completed" id="completed" value="false" class="form-control" placeholder="Title" required>
                 </div>
