--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,7 +14,7 @@
                             <div class="progress">
                                 <div class="progress-bar" style="width: {{pending}}%"></div>
                             </div>
-                            <span class="progress-description">{{pending}}% Increase in 30 Days</span>
+                            <!--span-- class="progress-description">{{pending}}% Increase in 30 Days</span-->
                         </div>
                         <!-- /.info-box-content -->
                     </div>
@@ -54,7 +54,7 @@
                             <div class="progress">
                                 <div class="progress-bar" style="width: {{events}}%"></div>
                             </div>
-                            <span class="progress-description"></span>
+                            <!--span-- class="progress-description"></span-->
                         </div>
                         <!-- /.info-box-content -->
                     </div>
@@ -73,9 +73,9 @@
                         <div class="progress">
                             <div class="progress-bar" style="width: 41%"></div>
                         </div>
-                        <span class="progress-description">
+                        <!--span-- class="progress-description">
                             5% Increase in 30 Days
-                        </span>
+                        </span-->
                     </div>
                     <!-- /.info-box-content -->
                 </div>
