--- a/templates/partials/dynamic_header.hbs
+++ b/templates/partials/dynamic_header.hbs
@@ -1,15 +1,17 @@
-<div class="app-title">
+<!-- Content Header (Page header) -->
+<div class="content-header">
     <div class="container-fluid">
-        <div class="row">
+        <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="">Admin</h1>
-            </div>
+                <h1 class="m-0 text-dark">Dashboard</h1>
+            </div><!-- /.col -->
             <div class="col-sm-6">
-                <ul class="breadcrumb float-sm-right list-unstyled" style="background-color:ghostwhite !important;">
-                    <li class="breadcrumb-item"><a href="/users" role="button">{{title}}</a> </li>
-                    <li class="breadcrumb-item">{{head}}</li>
-                </ul>
-            </div>
-        </div>
-    </div>
+                <ol class="breadcrumb float-sm-right">
+                    <li class="breadcrumb-item"><a href="/users/">{{title}}</a></li>
+                    <li class="breadcrumb-item active">{{head}}</li>
+                </ol>
+            </div><!-- /.col -->
+        </div><!-- /.row -->
+    </div><!-- /.container-fluid -->
 </div>
+<!-- /.content-header -->
