--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -1,147 +1,30 @@
-<footer class="app-footer">
-    <div class="py-3 mx-3">
-        <span>Copyright &copy; 2019 -
+<!-- Main Footer -->
+<footer class="main-footer">
+		<span>Copyright &copy; 2019 -
             <script>document.write(new Date().getFullYear());</script>
             <a href="#" style="text-decoration: none;">Ronewa.io</a>.
         </span>
-        All rights reserved.
-        <div class="float-right d-none d-sm-block">
-            <span>Version</span> 3.0.1
-        </div>
+    All rights reserved.
+    <div class="float-right d-none d-sm-inline-block">
+        <b>Version</b> 3.0.1
     </div>
 </footer>
+<div id="sidebar-overlay"></div>
+<!--/div-->
+<!-- ./wrapper -->
+
+
+<!-- REQUIRED SCRIPTS -->
+
 <!-- jQuery -->
-<script src="/js/jquery/jquery.min.js"></script>
-<!-- jQuery UI -->
-<script src="/js/jquery-ui/jquery-ui.min.js"></script>
-<!-- Bootstrap 4 -->
-<script src="/js/bootstrap/js/bootstrap.bundle.min.js"></script>
-<!-- AdminLTE App -->
-<script src="/js/adminlte.min.js"></script>
-<!-- AdminLTE for demo purposes -->
-<script src="/js/demo.js"></script>
-<!-- FLOT CHARTS -->
-<script src="/js/flot/jquery.flot.js"></script>
-<!-- FLOT RESIZE PLUGIN - allows the chart to redraw when the window is resized -->
-<script src="/js/flot-old/jquery.flot.resize.min.js"></script>
-<!-- FLOT PIE PLUGIN - also used to draw donut charts -->
-<script src="/js/flot-old/jquery.flot.pie.min.js"></script>
-<!-- JQVMap -->
-<script src="/css/jqvmap/jquery.vmap.min.js"></script>
-<!-- Tempusdominus Bootstrap 4 -->
+<script src="/js/jquery.min.js.download"></script>
+<!-- Bootstrap -->
+<script src="/js/bootstrap.bundle.min.js.download"></script>
+<!-- AdminLTE -->
+<script src="/js/adminlte.js.download"></script>
+<!-- Moment -->
 <script src="/js/moment/moment.min.js"></script>
-<script src="/css/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-<script src="/js/app.js"></script>
 <!-- Preload -->
 <script src="/javascripts/preload.js"></script>
 <script src="/javascripts/complete.js"></script>
 <script src="/javascripts/costume.js"></script>
-
-<!--script-- src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script-->
-<script>
-    $(function () {
-        $("#end_date").datepicker();
-        $("#start_date").datepicker();
-        $("#dates").datepicker();
-    });
-    /*var d = new Date(),
-            day = '' + d.getDate(),
-            month = '' + (d.getMonth() + 1),
-            year = d.getFullYear();
-    console.log([year, month, day].join('-'));*/
-</script>
-<!-- Page script -->
-<script>
-    $(function () {
-        "use strict";
-        /*
-         * DONUT CHART
-         * -----------
-         */
-
-        var donutData = [
-            {
-                label: "Series2",
-                data: 45,
-                color: "#3c8dbc"
-            },
-            {
-                label: "Series3",
-                data: 5,
-                color: "#0073b7"
-            },
-            {
-                label: "Series4",
-                data: 35,
-                color: "#00c0ef"
-            },
-            {
-                label: "Series 5",
-                data: 15,
-                color: "#00B7FF"
-            }
-        ];
-        $.plot("#donut-chart", donutData, {
-            series: {
-                pie: {
-                    show: true,
-                    radius: 1,
-                    innerRadius: 0.5,
-                    label: {
-                        show: true,
-                        radius: 2 / 3,
-                        formatter: labelFormatter,
-                        threshold: 0.1
-                    }
-
-                }
-            },
-            legend: {
-                show: false
-            }
-        });
-        /*
-         * END DONUT CHART
-         */
-
-        /*
- * BAR CHART
- * ---------
- */
-
-        var bar_data = {
-            data: [[1, 10], [2, 8], [3, 4], [4, 13], [5, 17], [6, 9]],
-            bars: { show: true }
-        };
-        $.plot('#bar-chart', [bar_data], {
-            grid: {
-                borderWidth: 1,
-                borderColor: '#f3f3f3',
-                tickColor: '#f3f3f3'
-            },
-            series: {
-                bars: {
-                    show: true, barWidth: 0.5, align: 'center',
-                },
-            },
-            colors: ['#3c8dbc'],
-            xaxis: {
-                ticks: [[1, 'January'], [2, 'February'], [3, 'March'], [4, 'April'], [5, 'May'], [6, 'June']]
-            }
-        });
-        /* END BAR CHART */
-
-    });
-
-    /*
-     * Custom Label formatter
-     * ----------------------
-     */
-    function labelFormatter(label, series) {
-        return '<div style="font-size:13px; text-align:center; padding:2px; color: #fff; font-weight: 600;">'
-            + label
-            + '<br>'
-            + Math.round(series.percent) + '%</div>'
-    }
-
-</script>
