--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,3 +1,5 @@
+<div class="content-header">
+    <div class="container-fluid">
 <div class="row mb-2">
     <div class="col">
         <!--h5 class="mt-4 mb-2">Info Box With <code>bg-*</code></h5-->
@@ -136,5 +138,7 @@
             <!-- /.card-body-->
         </div>
         <!-- /.card -->
+    </div>
+</div>
     </div>
 </div>
